fix layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@ img {
   object-fit: contain;
 }
 
-.response-h {
+.responsive-h {
   height: 75%;
 }
 
